--- a/assets/style.css
+++ b/assets/style.css
@@ -4,32 +4,20 @@ body {
   font-size: 16px;
   background-color: #414846;
   color: rgba(255, 255, 255, .8);
-  font-weight: 300;
+  font-weight: 400;
   padding: .5rem;
   margin: 0;
   position: relative;
 }
 
 .bg-img {
-  position: absolute;
+  position: fixed;
   z-index: -1;
-  width: 100%;
-  height: 100%;
-  min-height: 100vh;
   top: 0;
   left: 0;
-  overflow: hidden;
-  /*background-position: center;*/
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.bg-img-home {
-  background-image: url(images/tree.gif);
-}
-
-.bg-img-404 {
-  background-image: url(images/space.gif);
+  min-width: 100%;
+  min-height: 100%;
+  opacity: .25;
 }
 
 h1 {
@@ -63,9 +51,9 @@ p {
 }
 
 a {
-  color: white;
+  color: rgba(255, 255, 255, 1);
   text-decoration: none;
-  font-weight: bold;
+  font-weight: 700;
   display: inline-block;
   position: relative;
 }
