--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,6 +1,6 @@
 body {
   text-align: center;
-  font-family: 'Noto Sans', sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-size: 16px;
   background-color: #000;
   color: rgba(255, 255, 255, .8);
@@ -8,6 +8,7 @@ body {
   padding: .5rem;
   margin: 0;
   position: relative;
+  letter-spacing: 0.5px;
 }
 
 .bg-img {
@@ -21,12 +22,13 @@ body {
 }
 
 h1 {
-  font-family: 'Poppins', sans-serif;
+  /* font-family: 'Poppins', sans-serif; */
   font-size: 6rem;
   margin-bottom: 2rem;
   margin-top: 10rem;
   color: white;
   line-height: 1;
+  font-weight: 900;
 }
 
 .intro {
