--- a/_includes/default.njk
+++ b/_includes/default.njk
@@ -1,30 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>
-      {% block title %}Karly Nelson{% endblock %}
-    </title>
-    <meta charset="UTF-8"/>
+    <title>{% block title %}Karly Nelson{% endblock %} - {{title}}</title>
+    <meta charset="UTF-8" />
     {% if description %}
-      <meta name="description" content="{{description}}"/>
+    <meta name="description" content="{{description}}" />
     {% endif %}
-    <meta http-equiv="x-ua-compatible" content="ie=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, viewport-fit=cover"/>
-    <link rel="stylesheet" href="/style.css?v={% version %}"/>
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no, viewport-fit=cover"
+    />
+    <link rel="stylesheet" href="/style.css?v={% version %}" />
     <!-- favicons -->
-    <link rel="icon" href="/favicon.ico"/>
-    <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon.png"/>
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png"/>
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"/>
-    <link rel="manifest" href="/site.webmanifest"/>
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"/>
-    <meta name="msapplication-TileColor" content="#da532c"/>
-    <meta name="theme-color" content="#ffffff"/>
-    <link rel="preconnect" href="https://fonts.googleapis.com"/>
+    <link rel="icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Tiny5&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Karla:wght@400;600;800&display=swap"
       rel="stylesheet"
-/>
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Micro+5&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=VT323&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- Google tag (gtag.js) -->
     <script
@@ -32,22 +46,33 @@
       src="https://www.googletagmanager.com/gtag/js?id=G-88TSRYR9CT"
     ></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
+      window.dataLayer = window.dataLayer || []
       function gtag() {
-        dataLayer.push(arguments);
+        dataLayer.push(arguments)
       }
-      gtag("js", new Date());
+      gtag("js", new Date())
 
-      gtag("config", "G-88TSRYR9CT");
+      gtag("config", "G-88TSRYR9CT")
     </script>
     {% block head %}{% endblock %}
     <script defer src="/js/alpine.js?v={% version %}"></script>
   </head>
   <body>
-    <main class="px-6">
-      {% block content %}
-        {{ content | safe }}
-      {% endblock %}
+    <header>
+      Karly Nelson
+
+      <nav>
+        <a href="/">About Me</a>
+        <a href="/articles">Articles</a>
+      </nav>
+    </header>
+    <main class="px-6 max-w-4xl mx-auto">
+      {% block content %} {{ content | safe }} {% endblock %}
     </main>
+
+    <footer>
+      <p>&copy; 2024 Karly Nelson</p>
+      <p>Colophon: Built with Eleventy, Tailwind CSS, AlpineJS, and Netlify</p>
+    </footer>
   </body>
 </html>
