--- a/index.njk
+++ b/index.njk
@@ -1,47 +1,40 @@
 ---
 layout: default.njk
+title: About Me
 ---
 
-<div class="max-w-2xl mx-auto">
-  {# <div>
-      <span class="text-change">Good design</span>
-      <br/ >
-        <span class="change">is<br/>as little design<br/>as possible</span><br/>
-        <span x-data="{message:'🤖 Hello World 🤓'}" x-text="message"></span>
-      </div>
-    </div> #}
-
-  <h1 class="text-6xl font-bold mt-40">Hi! I'm Karly Nelson</h1>
+<div class="max-w-4xl mx-auto about-me">
+  <h1 class="mt-40">Hi! I'm Karly</h1>
   <p class="text-2xl mt-8">
-        I'm a Senior Software Engineer at
-        <a target="_blank" rel="noopener noreferrer" href="https://lworks.io/"
-          >Ledger Works</a
-        >
-        in St. Louis. I design and build web apps, mobile apps, and a pretty
-        sweet cheese board.
-      </p>
+    I'm a Senior Software Engineer and UX Designer at
+    <a target="_blank" rel="noopener noreferrer" href="https://lworks.io/"
+      >Ledger Works</a
+    >
+    in St. Louis. I design and build web apps, mobile apps, and some pretty
+    sweet charcuterie boards.
+  </p>
   <p class="mt-6 text-xl">
-          Find me on
-          <a
-            target="_blank"
-            rel="noopener noreferrer"
-            class="linkedin"
-            href="https://www.linkedin.com/in/karlynelson"
-            >LinkedIn</a
-          >,
-          <a
-            target="_blank"
-            rel="noopener noreferrer"
-            class="dribbble"
-            href="https://dribbble.com/KarlyANelson"
-            >Dribbble</a
-          >, and
-          <a
-            target="_blank"
-            rel="noopener noreferrer"
-            class="github"
-            href="https://github.com/karlyanelson"
-            >Github</a
-          >.
-      </p>
-  {# {% endblock %} #}
+    Find me on
+    <a
+      target="_blank"
+      rel="noopener noreferrer"
+      class="linkedin"
+      href="https://www.linkedin.com/in/karlynelson"
+      >LinkedIn</a
+    >,
+    <a
+      target="_blank"
+      rel="noopener noreferrer"
+      class="dribbble"
+      href="https://dribbble.com/KarlyANelson"
+      >Dribbble</a
+    >, and
+    <a
+      target="_blank"
+      rel="noopener noreferrer"
+      class="github"
+      href="https://github.com/karlyanelson"
+      >Github</a
+    >.
+  </p>
+</div>
