--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -2,40 +2,68 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+  .text-primary {
+    @apply text-slate-800 dark:text-slate-200;
+  }
+
+  .text-secondary {
+    @apply text-slate-600 dark:text-slate-400;
+  }
+
+  .text-action {
+    @apply text-sky-700 dark:text-sky-400;
+  }
+
+  .bg-action {
+    @apply bg-sky-700 dark:bg-sky-400;
+  }
+
+  .border-action {
+    @apply border border-solid rounded border-sky-700 dark:border-sky-400;
+  }
+
+  .monospace {
+    font-family: "Tiny5", "Courier New", Courier, monospace;
+  }
+}
+
 body {
-  font-family: "Karla", sans-serif;
-  @apply bg-white dark:bg-slate-800 text-slate-800 dark:text-slate-200
-  /* font-size: 16px;
-  background-color: var(--color-bg);
-  color: var(--color-text);
-  font-weight: 400;
-  padding: 0.5rem;
-  margin: 0;
-  position: relative;
-  letter-spacing: 0.5px; */;
+  font-family: "Karla", Helvetica, Arial, sans-serif;
+  @apply bg-white dark:bg-slate-800 text-primary;
+}
+
+h1 {
+  @apply font-extrabold text-7xl;
 }
 
 a {
-  @apply text-sky-700 dark:text-sky-400;
+  @apply text-action;
   text-decoration: none;
   font-weight: 600;
   display: inline-block;
   position: relative;
 }
 
-a::after {
-  @apply bg-sky-700 dark:bg-sky-400;
+.fancy-hover::after {
+  @apply bg-action;
   transition: all ease 300ms;
   content: "";
-  height: 3px;
+  height: 4px;
   width: 0%;
   position: absolute;
-  bottom: -3px;
+  bottom: -4px;
   left: 0;
   right: 0;
 }
 
-a:hover::after,
-a:focus::after {
+.fancy-hover:hover::after,
+.fancy-hover:focus::after {
   width: 100%;
+}
+
+.about-me a,
+header a,
+footer a {
+  @apply fancy-hover;
 }
