--- a/articles/index.njk
+++ b/articles/index.njk
@@ -11,9 +11,19 @@ published: Sept 18, 2024
 <ul>
 {%- for post in collections.post -%}
   <li{% if page.url == post.url %} aria-current="page"{% endif %} class="my-6">
-    <a class="p-8 border-action fancy-hover hover:bg-action hover:bg-opacity-15 dark:hover:bg-opacity-15" href="{{ post.url }}">
+    <a class="block p-8 border border-solid rounded border-action fancy-hover hover:bg-action hover:bg-opacity-15 dark:hover:bg-opacity-15" href="{{ post.url }}">
       <h2 class="font-bold text-2xl ">{{ post.data.title }}</h2>
-        <p class="text-primary">{{ post.data.updatedDate}}</p>
+        <p class="text-secondary font-light text-sm my-2">Published: {{ post.data.publishedDate}}
+          {%- if post.data.updatedDate -%}
+            <span> • Updated: {{ post.data.updatedDate }}</span>
+          {%- endif -%}
+        </p>
+
+        <ul>
+          {%- for tech in post.data.techStack -%}
+            <li class="inline-block border border-solid border-secondary text-secondary text-xs px-2 py-1 rounded-lg mr-2">{{ tech }}</li>
+          {%- endfor -%}
+          </ul>
       </a>
   </li>
 {%- endfor -%}
