add real article; and prismjs for syntax highlighting

--- a/_includes/default.njk
+++ b/_includes/default.njk
@@ -11,6 +11,10 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no, viewport-fit=cover"
     />
+    <link
+      href="https://unpkg.com/prismjs@1.20.0/themes/prism-okaidia.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="/style.css?v={% version %}" />
     <!-- favicons -->
     <link rel="icon" href="/favicon.ico" />
@@ -29,14 +33,6 @@
     />
     <link
       href="https://fonts.googleapis.com/css2?family=Karla:wght@400;600;800&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Micro+5&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=VT323&display=swap"
       rel="stylesheet"
     />
 
@@ -74,7 +70,10 @@
       class="text-secondary flex items-center justify-between px-8 max-w-7xl mx-auto"
     >
       <p>&copy; 2024 Karly Nelson</p>
-      <p>Colophon: Built with Eleventy, Tailwind CSS, AlpineJS, and Netlify</p>
+      <p>
+        Colophon: Built with Eleventy, Tailwind CSS, AlpineJS, PrismJS, and
+        Netlify
+      </p>
     </footer>
   </body>
 </html>
