--- a/_includes/post.njk
+++ b/_includes/post.njk
@@ -3,7 +3,7 @@ layout: default.njk
 ---
 
 <article>
-  <h1 class="mt-16 mb-8">{{title}}</h1>
+  <h1 class="mb-8">{{title}}</h1>
 
   {% if publishedDate %}
   <p class="text-secondary text-sm">
