--- a/index.njk
+++ b/index.njk
@@ -3,8 +3,8 @@ layout: default.njk
 title: About Me
 ---
 
-<div class="max-w-4xl mx-auto about-me">
-  <h1 class="mt-40">Hi! I'm Karly</h1>
+<div class="about-me">
+  <h1>Hi! I'm Karly</h1>
   <p class="text-2xl mt-8">
     I'm a Senior Software Engineer and UX Designer at
     <a target="_blank" rel="noopener noreferrer" href="https://lworks.io/"
