--- a/posts/index.njk
+++ b/posts/index.njk
@@ -6,7 +6,11 @@ eleventyImport:
 published: Sept 18, 2024
 ---
 
-<h1>Writing</h1>
+<div>
+<div class="mb-12">
+  <h1 class="mb-2">Articles</h1>
+  <p class="text-secondary">How-to articles on various specific problems I've solved.</p>
+</div>
 
 <ul>
 {%- for post in collections.post -%}
@@ -28,5 +32,5 @@ published: Sept 18, 2024
   </li>
 {%- endfor -%}
 </ul>
-
+</div>
 
