--- a/_includes/default.njk
+++ b/_includes/default.njk
@@ -13,7 +13,7 @@
     />
     {# See themes at https://unpkg.com/browse/prismjs@1.20.0/themes/ #}
     <link
-      href="https://unpkg.com/prismjs@1.20.0/themes/prism-twilight.css"
+      href="https://unpkg.com/prismjs@1.20.0/themes/prism-dark.css"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/style.css?v={% version %}" />
