--- a/posts/index.njk
+++ b/posts/index.njk
@@ -15,7 +15,7 @@ published: Sept 18, 2024
 <ul>
 {%- for post in collections.post -%}
   <li{% if page.url == post.url %} aria-current="page"{% endif %} class="my-6">
-    <a class="block p-8 border border-solid rounded border-action fancy-hover hover:bg-action hover:bg-opacity-15 dark:hover:bg-opacity-15" href="{{ post.url }}">
+    <a class="block p-8 border border-solid rounded border-action fancy-hover bg-action-card-hover" href="{{ post.url }}">
       <h2 class="font-bold text-2xl ">{{ post.data.title }}</h2>
         <p class="text-secondary font-light text-sm my-2">Published: {{ post.data.publishedDate}}
           {%- if post.data.updatedDate -%}
