refactor date, add new draft article

--- a/_includes/default.njk
+++ b/_includes/default.njk
@@ -75,8 +75,9 @@
     >
       <p>&copy; 2024 Karly Nelson</p>
       <p>
-        Colophon: Built with Eleventy, Tailwind CSS, AlpineJS, PrismJS, and
-        Netlify
+        Colophon: Built with [Eleventy](https://www.11ty.dev/), [Tailwind
+        CSS](https://tailwindcss.com/), [AlpineJS](https://alpinejs.dev/),
+        [PrismJS](https://prismjs.com/), and [Netlify](https://www.netlify.com/)
       </p>
     </footer>
   </body>
