fix footer links

--- a/_includes/default.njk
+++ b/_includes/default.njk
@@ -75,9 +75,11 @@
     >
       <p>&copy; 2024 Karly Nelson</p>
       <p>
-        Colophon: Built with [Eleventy](https://www.11ty.dev/), [Tailwind
-        CSS](https://tailwindcss.com/), [AlpineJS](https://alpinejs.dev/),
-        [PrismJS](https://prismjs.com/), and [Netlify](https://www.netlify.com/)
+        Colophon: Built with <a href="https://www.11ty.dev/">Eleventy</a>,
+        <a href="https://tailwindcss.com/">Tailwind CSS</a>,
+        <a href="https://alpinejs.dev/">AlpineJS</a>,
+        <a href="https://prismjs.com/">PrismJS</a>, and
+        <a href="https://www.netlify.com/">Netlify</a>
       </p>
     </footer>
   </body>
