--- a/_includes/default.njk
+++ b/_includes/default.njk
@@ -62,8 +62,8 @@
     >
       <a href="/" class="text-primary">Karly Nelson</a>
       <nav class="flex items-center gap-8">
-        <a href="/">About Me</a>
-        <a href="/posts">Articles</a>
+        <a href="/" {% if page.slug == "/" %} aria-current="page"{% endif %}>About Me</a>
+        <a href="/posts" {% if page.slug == "/posts" %} aria-current="page" style="background:red"{% endif %}>Articles</a>
       </nav>
     </header>
     <main class="px-6 max-w-5xl mx-auto mt-24">
