--- a/posts/index.njk
+++ b/posts/index.njk
@@ -30,13 +30,14 @@ published: Sept 18, 2024
         {% endif %}
         <h2 class="font-bold text-2xl">{{ post.data.title }}</h2>
         <p class="text-secondary font-light text-sm my-2">
-          Last updated: {{post.date.toLocaleString( "en-US", { year: 'numeric',
-          month: 'long', day: 'numeric' })}}
+          Last updated: {{post.date | postDate}}
         </p>
 
         <ul class="flex items-center flex-wrap gap-4">
           {%- for tech in post.data.techStack -%}
-          <li class="chip">{{ tech.name }} v{{tech.version}}</li>
+          <li class="chip">
+            {{ tech.name }} {% if tech.version %}v{{tech.version}}{% endif %}
+          </li>
           {%- endfor -%}
         </ul>
       </a>
