--- a/posts/index.njk
+++ b/posts/index.njk
@@ -29,6 +29,7 @@ published: Sept 18, 2024
         </span>
         {% endif %}
         <h2 class="font-bold text-2xl">{{ post.data.title }}</h2>
+        <p class="text-primary my-2">{{ post.data.description }}</p>
         <p class="text-secondary font-light text-sm my-2">
           Last updated: {{post.date | postDate}}
         </p>
