--- a/index.njk
+++ b/index.njk
@@ -3,7 +3,7 @@ layout: default.njk
 title: About Me
 ---
 
-<div class="about-me">
+<div class="about-me px-6 max-w-5xl mx-auto pb-64">
   <h1>Hi! I'm Karly</h1>
   <p class="text-2xl mt-8">
     I'm a Senior Software Engineer and UX Designer at
