--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -3,36 +3,63 @@
 @tailwind utilities;
 
 @layer utilities {
-  .text-primary {
-    @apply text-slate-800 dark:text-slate-100;
+  .text-primary-on-light {
+    @apply text-slate-800;
   }
 
-  .text-secondary {
-    @apply text-slate-600 dark:text-slate-300;
+  .text-primary-on-dark {
+    @apply text-slate-100;
   }
 
-  .text-action {
-    @apply text-sky-700 dark:text-sky-400;
+  .text-secondary-on-light {
+    @apply text-slate-600;
   }
 
-  .bg-action {
-    @apply bg-sky-700 dark:bg-sky-400;
+  .text-secondary-on-dark {
+    @apply: text-slate-300;
   }
 
-  .bg-action-card-hover {
-    @apply hover:bg-sky-700  hover:bg-opacity-15 dark:hover:bg-sky-400 dark:hover:bg-opacity-15;
+  .text-action-on-light {
+    @apply text-sky-700;
   }
 
-  .border-action {
-    @apply border-sky-700 dark:border-sky-400;
+  .text-action-on-dark {
+    @apply text-sky-400;
   }
 
-  .border-primary {
-    @apply border-slate-800 dark:border-slate-200;
+  .bg-action-on-light {
+    @apply bg-sky-700;
   }
 
-  .border-secondary {
-    @apply border-slate-600 dark:border-slate-300;
+  .bg-action-on-dark {
+    @apply bg-sky-400;
+  }
+
+  .bg-action-card-hover-on-dark {
+    @apply hover:bg-sky-400 hover:bg-opacity-15;
+  }
+
+  .border-action-on-dark {
+    @apply: border-sky-400;
+  }
+
+  .border-action-on-light {
+    @apply border-sky-700;
+  }
+
+  .border-primary-on-light {
+    @apply border-slate-800;
+  }
+
+  .border-primary-on-dark {
+    @apply: border-slate-200;
+  }
+
+  .border-secondary-on-light {
+    @apply border-slate-600;
+  }
+  .border-secondary-on-dark {
+    @apply border-slate-300;
   }
 
   .font-family-basic {
@@ -48,7 +75,7 @@
 
 body {
   font-size: 1.125rem;
-  @apply bg-white dark:bg-slate-800 text-primary font-family-basic;
+  @apply bg-slate-800 text-primary-on-dark font-family-basic;
 }
 
 /* Headings */
@@ -71,8 +98,8 @@ h4 {
 
 /* Links */
 
-a:not(.text-primary) {
-  @apply text-action;
+a {
+  @apply text-action-on-dark;
 }
 
 a {
@@ -84,8 +111,7 @@ a {
 
 /* Fancy hover */
 
-.fancy-hover::after {
-  @apply bg-action;
+._fancy-hover-base {
   transition: all ease 300ms;
   content: "";
   height: 4px;
@@ -96,15 +122,25 @@ a {
   right: 0;
 }
 
+.fancy-hover::after {
+  @apply _fancy-hover-base bg-action-on-dark;
+}
+
+.fancy-hover-on-light::after {
+  @apply _fancy-hover-base bg-action-on-light;
+}
+
 .fancy-hover:hover::after,
-.fancy-hover:focus::after {
+.fancy-hover:focus::after,
+.fancy-hover-on-light:hover::after,
+.fancy-hover-on-light:focus::after {
   width: 100%;
 }
 
 .about-me a,
 header a,
 footer a {
-  @apply fancy-hover;
+  @apply fancy-hover-on-light;
 }
 
 /* Code blocks */
@@ -115,9 +151,18 @@ pre[class*="language-"] {
   margin: 1rem 0;
 }
 
-code {
+code[class*="language-"] {
+  @apply py-6;
+}
+
+code:not([class*="language-"]) {
   font-size: 0.75em;
   @apply bg-slate-600 rounded-lg py-1 px-2;
+}
+
+.article-content code:not([class*="language-"]) {
+  font-size: 0.75em;
+  @apply bg-slate-300 rounded-lg py-1 px-2;
 }
 
 /* Chips */
@@ -127,14 +172,23 @@ code {
 }
 
 .chip {
-  @apply _chip-base border-secondary text-secondary;
+  @apply _chip-base border-secondary-on-dark text-secondary-on-dark;
 }
 
 .chip-action {
-  @apply _chip-base border-action text-action bg-action-card-hover;
+  @apply _chip-base border-action-on-dark text-action-on-dark bg-action-card-hover-on-dark;
 }
 
 /* Articles */
+
+.article-content {
+  @apply bg-slate-100 text-primary-on-light;
+}
+
+.article content a {
+  @apply text-action-on-light;
+}
+
 .article-content h1,
 .article-content h2,
 .article-content h3,
@@ -171,7 +225,10 @@ code {
   margin-top: 0.25rem;
 }
 
-.article-content a,
+.article-content a {
+  @apply fancy-hover-on-light;
+}
+
 .toc a {
   @apply fancy-hover;
 }
