--- a/_includes/default.njk
+++ b/_includes/default.njk
@@ -63,9 +63,8 @@
     <main class="mt-24 pb-6">
       {% block content %} {{ content | safe }} {% endblock %}
     </main>
-
     <footer
-      class="text-secondary flex items-center justify-between p-8 max-w-7xl mx-auto w-full mt-6"
+      class="text-secondary flex items-center justify-between p-8 max-w-7xl mx-auto w-full"
     >
       <p>&copy; 2024 Karly Nelson</p>
       <p>
